@@ -17,14 +17,6 @@ Messages with empty first part always checksum the same?
 Top of the list 
 ---------------
 
-- Unify front-ends that process email?
-  Fix up access check stuff to alliw request_response by default.
-
-
-
-- -request to owner or majordomo?  ite config option to choose, passed into
-    MTAConfig.
-
 ! Make sure that $SENDER is reset properly after _trim_approval is called,
   so we pick up the real sender, not the approver.
 
